feat: order routes documentation
